# cpp_projekt

./: .gitignore  CMakeLists.txt  QA_in_cpp_projekt.txt  README.md
CLI_ver1/: CLI.cpp  DecHeader.h  Kysitlus_Tartu2024.pro  Kysitlus_Tartu2024.pro.user.64ad6a4  main.cpp  question.cpp  question.h
Project files/: CMakeLists.txt  CMakeLists.txt.user.64ad6a4  gatheringResults.h  img.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  question.cpp  question.h  results.cpp  results.h  sendingQuestions.h  yellowgreen.xml
Q&A/: küsimused_vastused.txt
